default/objects/White_Space_Amount_Type_Association__c/White_Space_Amount_Type_Association__c.object-meta.xml
<CustomObject>
    <label>White Space Amount Type Association</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>White Space Amount Type Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>White Space Amount Type Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>