default/objects/White_Space_Amount_Type_Association__c/fields/White_Space_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Amount_Type__c</fullName>
    <label>Cross-Sell Amount Type</label>
    <referenceTo>White_Space_Amount_Type__c</referenceTo>
    <relationshipLabel>White Space Amount Type Associations</relationshipLabel>
    <relationshipName>White_Space_Amount_Type_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>