default/objects/White_Space_Amount_Type_Association__c/fields/White_Space_Cell__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Cell__c</fullName>
    <label>White Space Cell</label>
    <referenceTo>White_Space_Cell__c</referenceTo>
    <relationshipLabel>White Space Amount Type Associations</relationshipLabel>
    <relationshipName>White_Space_Amount_Type_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>